<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/background_gradient"
    android:layout_height="match_parent"
    tools:context=".presentation.activity.about.AboutActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.85"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_text"
            android:fontFamily="@font/dosis_bold"
            android:textSize="38sp"
            android:text="@string/welcome" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/secondary_text"
            android:fontFamily="@font/dosis_medium"
            android:textAlignment="center"
            android:textSize="28sp"
            android:text="@string/about_text" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/char2" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/start"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:fontFamily="@font/dosis_bold"
            android:textSize="38sp"
            android:background="@drawable/button_background"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/start"
            android:paddingVertical="10dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>