<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".presentation.activity.name.NameActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="10dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_text"
                android:textAlignment="center"
                android:fontFamily="@font/dosis_bold"
                android:textSize="38sp"
                android:text="@string/what_s_your_name" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="260dp"
                android:adjustViewBounds="true"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/char2" />

            <EditText
                android:id="@+id/ediText"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:textCursorDrawable="@drawable/et_cursor"
                android:layout_marginBottom="10dp"
                android:hint="@string/name"
                android:textColor="@color/primary_text"
                android:fontFamily="@font/dosis_bold"
                android:padding="10dp"
                android:inputType="textPersonName"
                android:textSize="30sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/confirm"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:fontFamily="@font/dosis_bold"
                android:textSize="38sp"
                android:background="@drawable/button_background"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:text="@string/confirm"
                android:paddingVertical="10dp" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>